# study-lib

./: .gitignore  .travis.yml  README.md  codecov.yml
Ege/: single_link_list.cpp
Taylan/: ReadMe.md
Taylan/CPP/: list  singly_linked_list.cpp
Taylan/Crypt/python/: crpt.py
Taylan/Doubly-Linked-List/java/: dll.java
Taylan/Singly-Linked-List/cpp/: list  singly_linked_list.cpp  singly_linked_list.h  test.cpp
Taylan/Stack/cpp/: CMakeLists.txt  stack.cpp
Taylan/despat/abstract-factory/: CMakeLists.txt
Taylan/despat/adaptor/: lib.h
Taylan/despat/command/: CMakeLists.txt  main.cpp
Taylan/despat/composite/: ReadMe.md  main.cpp
Taylan/despat/facade/: main.cpp
Taylan/despat/iterator/: CMakeLists.txt  ReadMe.md  main.cpp  main.hpp  taylan-dogan-lab-2.cpp  taylan-dogan-lab-2.hpp
Taylan/despat/lab2/: taylan-dogan-lab-2.cpp
Taylan/despat/observer/lab/: CMakeLists.txt
Taylan/despat/singleton/: main.cpp
Taylan/despat/singleton/lab/: main.cpp
Taylan/despat/singleton/threadSafe/: CMakeLists.txt
Taylan/despat/template/: main.cpp
Taylan/despat/visitor/: CMakeLists.txt
Taylan/dsa/Singly-Linked-List/cpp/: .travis.yml  CMakeLists.txt  node.hpp  singly_linked_list.cpp  singly_linked_list.hpp  sll.cpp  test.cpp
Taylan/dsa/Singly-Linked-List/cpp/cmake/: googletest-download.cmake
Taylan/dsa/Singly-Linked-List/cpp/include/: list.hpp
Taylan/dsa/Singly-Linked-List/cpp/src/: CMakeLists.txt  list.cpp  node.cpp
Taylan/dsa/Singly-Linked-List/cpp/test/: CMakeLists.txt  list_test.cpp  node_test.cpp
Taylan/languages/: README.org
Taylan/languages/rust/: basic.rs  structs.rs
Taylan/machine-learning/lab5/: main.py
Taylan/machine-learning/linear-regression/: main.py
Taylan/machine-learning/linear-regression/lab1/: lab1.py
Taylan/machine-learning/linear-regression/lab2/: lab2.py
Taylan/machine-learning/linear-regression/lab4/: lab4.py
Taylan/machine-learning/project/: main.py
Taylan/os/banker/: banker.cpp
Taylan/os/processSort/: main.c  main.h  priority.c  rr.c
Taylan/sys-prog/threading/src/com/kondanta/: Collector.java  Driver.java  FileAccessors.java  Main.java  ThreadSpawner.java
Unal/: ReadMe.md
Unal/DES-like Project/: ReadMe.txt
Unal/DES-like Project/test/: input.txt
Unal/DOS_Assembly/: Readme.md
Unal/DOS_Assembly/Calculator/: Readme.md  test.asm
Unal/DOS_Assembly/Lowercase-Uppercase/: test.asm
Unal/Design Patterns/Adaptor Pattern/LAB8/: CMakeLists.txt  main.cpp  newlib.h
Unal/Design Patterns/Command Pattern/LAB4/: CMakeLists.txt  main.cpp
Unal/Design Patterns/Composite Pattern/LAB3/: CMakeLists.txt  main.cpp
Unal/Design Patterns/Facade Pattern/Lab7/: CMakeLists.txt  main.cpp
Unal/Design Patterns/Homework Project/: CMakeLists.txt  main.cpp
Unal/Design Patterns/OCP/Lab1/: CMakeLists.txt  main.cpp
Unal/Design Patterns/Observer Pattern/LAB10/: CMakeLists.txt  main.cpp
Unal/Design Patterns/Singleton Pattern/LAB6/: CMakeLists.txt  main.cpp
Unal/Network and Crypto/DES-like Project/: decryption.py  encryption.py  main.py
Unal/Singly-Linked-List/Py/: Singly_linked_list.py
data-structures-and-algorithms/: ReadMe.md
data-structures-and-algorithms/Singly-Linked-List/cpp/cmake/: SinglyConfig.cmake
data-structures-and-algorithms/Singly-Linked-List/cpp/test/: list_test.cpp  node_test.cpp
design-pattern/abstract-factory/: main.cpp
design-pattern/adaptor/: CMakeLists.txt  main.cpp
design-pattern/command/: ReadMe.md  main.cpp
design-pattern/composite/: CMakeLists.txt  ReadMe.md  main.cpp
design-pattern/facade/: main.cpp
design-pattern/iterator/: main.cpp  main.hpp
design-pattern/observer/lab/: main.cpp
design-pattern/open-close/: CMakeLists.txt  main.cpp
design-pattern/singleton/lab/: CMakeLists.txt
design-pattern/singleton/threadSafe/: main.cpp
design-pattern/visitor/: main.cpp
machine-learning/linear-regression/lab2/: lab2.py
machine-learning/linear-regression/lab3/: lab3.py
machine-learning/linear-regression/lab4/: lab4.py
src/com/kondanta/: FileAccessors.java  Main.java  ThreadSpawner.java
system-programming/threading/src/com/kondanta/: FileAccessors.java
